updated my changes in literature review

--- a/Proposal.tex
+++ b/Proposal.tex
@@ -26,9 +26,10 @@
 
 
 \section{Introduction and Literature Review}
-Detection of spam has remained a major challenge due to the large number of unwanted and malicious emails sent every day, which cause threats such as phishing, fraud, and information overload. In addition, traditional rule-based filters are not usually successful against the changing spam methods.\cite{banday2009effectiveness,wang2025review}. Therefore, spam filtering has moved from rules to supervised machine learning with Naive Bayes, Logistic Regression, and Support Vector Machines trained on bag-of-words and TF--IDF \footnote{Term frequency-inverse document frequency} features over time \cite{hassan2022analytics,chavez2020nb}. These models improved accuracy and interpretability but largely ignore word order and semantic context.
 
-With larger datasets and greater compute, deep learning models such as RNNs and LSTMs preserved sequential dependencies and often outperformed classical methods, though at higher data and computational cost \cite{johnafrica2022lstm,nasreen2024novel}. More recently, Transformer-based architectures, such as BERT \footnote{Bidirectional encoder representations from transformers} and DistilBERT, use self-attention to capture long-range semantic relationships and enable effective transfer learning on relatively small labeled corpora for email security tasks, including spam and phishing detection \cite{tida2022universal,songailaite2023bertphish,asliyuksek2025multimodal}.
+Detection of spam has remained a major challenge due to the large number of unwanted and malicious emails sent every day, which cause threats such as phishing, fraud, and information overload. In addition, traditional rule-based filters are not usually successful against the constantly evolving spam methods~\cite{banday2009effectiveness,wang2025review}. Therefore, spam filtering has evolved from static rule-based systems to supervised machine learning approaches such as \textit{Naive Bayes}, \textit{Logistic Regression}, and \textit{Support Vector Machines}, trained on \textit{bag-of-words} and \textit{TF--IDF}\footnote{Term Frequency–Inverse Document Frequency} features over time~\cite{hassan2022analytics,chavez2020nb}. These models improved accuracy and interpretability but largely ignored word order and semantic context.
+
+With larger datasets and greater computational power, deep learning models such as \textit{Recurrent Neural Networks (RNNs)} and \textit{Long Short-Term Memory (LSTM)} networks preserved sequential dependencies and often outperformed classical methods, albeit with higher data and computational requirements~\cite{johnafrica2022lstm,nasreen2024novel}. More recently, \textit{Transformer}-based architectures, such as \textit{BERT}\footnote{Bidirectional Encoder Representations from Transformers} and \textit{DistilBERT}, leverage the \textit{self-attention mechanism} to capture long-range semantic relationships and enable effective \textit{transfer learning} on relatively small labeled corpora for email security tasks, including spam and phishing detection~\cite{tida2022universal,songailaite2023bertphish,asliyuksek2025multimodal}.
 
 \section{Motivations and Objectives}
 This project aims to implement a spam classification system that compares classical and modern learning models. Naive Bayes and Logistic Regression will serve as baselines, while transfer learning with pre-trained BERT and DistilBERT models will represent the modern approach. By comparing these methods, the project seeks to evaluate how transfer learning improves spam detection in terms of accuracy, precision, recall, and F1-score, contributing to more effective and context-aware email filtering.
